--- a/native/src/main/resources/graphiql.html
+++ b/native/src/main/resources/graphiql.html
@@ -1,46 +1,102 @@
-<!-- MIT License
-
-Copyright (c) GraphQL Contributors
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE. -->
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Ballerina GraphiQL Client</title>
-        <link href="https://unpkg.com/graphiql/graphiql.min.css" rel="stylesheet"/>
-    </head>
-    <body style="margin: 0;"    >
-        <div id="graphiql" style="height: 100vh;"></div>
+<html lang="en">
 
-        <script crossorigin src="https://unpkg.com/react/umd/react.production.min.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-        <script crossorigin src="https://unpkg.com/graphiql/graphiql.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ballerina GraphiQL Client</title>
+    <link rel="stylesheet" href="https://unpkg.com/graphiql@2.4.0/graphiql.min.css">
+    <style>
+        /* Ensure full height and prevent overflow */
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
 
-        <script>
-                const fetcher = GraphiQL.createFetcher(${url});
+        #graphiql {
+            height: 100vh;
+        }
+    </style>
+</head>
 
-                ReactDOM.render(
-                    React.createElement(GraphiQL, { fetcher: fetcher }),
-                    document.getElementById('graphiql'),
-                );
-        </script>
-    </body>
+<body>
+    <div id="graphiql"></div>
+
+    <!-- Include React and ReactDOM -->
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+    <!-- Include GraphiQL and Monaco Editor -->
+    <script src="https://unpkg.com/graphiql@2.4.0/graphiql.min.js"></script>
+    <script src="https://unpkg.com/@graphiql/plugin-explorer/dist/index.umd.js"></script>
+
+    <!-- Include GraphQL WebSocket client -->
+    <script src="https://unpkg.com/graphql-ws/umd/graphql-ws.min.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Placeholders that will be replaced dynamically
+            const HTTP_ENDPOINT = "${url}";
+            const WS_ENDPOINT = "${subscriptionUrl}";
+
+            function createFetcher() {
+                let wsClient;
+
+                if (WS_ENDPOINT && WS_ENDPOINT.startsWith("ws")) {
+                    wsClient = graphqlWs.createClient({
+                        url: WS_ENDPOINT,
+                        retryAttempts: 5,
+                        shouldRetry: () => true
+                    });
+
+                    return async (graphQLParams) => {
+                        const isSubscription = graphQLParams.query.trim().startsWith("subscription");
+                        if (isSubscription) {
+                            return {
+                                subscribe: (observer) => {
+                                    const unsubscribe = wsClient.subscribe(graphQLParams, {
+                                        next: observer.next,
+                                        error: observer.error,
+                                        complete: observer.complete,
+                                    });
+                                    return { unsubscribe };
+                                },
+                            };
+                        }
+
+                        return fetch(HTTP_ENDPOINT, {
+                            method: "POST",
+                            headers: {
+                                "Content-Type": "application/json",
+                                "Accept": "application/json"
+                            },
+                            body: JSON.stringify(graphQLParams)
+                        }).then(response => response.json());
+                    };
+                }
+
+                return async (graphQLParams) => {
+                    return fetch(HTTP_ENDPOINT, {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "Accept": "application/json"
+                        },
+                        body: JSON.stringify(graphQLParams)
+                    }).then(response => response.json());
+                };
+            }
+            const fetcher = createFetcher();
+
+            ReactDOM.createRoot(document.getElementById("graphiql")).render(
+                React.createElement(GraphiQL, { fetcher })
+            );
+        });
+    </script>
+</body>
+
 </html>
